# ChangeLog for net-proxy/squid
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.281 2009/08/27 20:20:09 beandog Exp $

  27 Aug 2009; Steve Dibb <beandog@gentoo.org> squid-2.7.6-r2.ebuild,
  squid-3.0.18-r1.ebuild:
  amd64 stable, bug 279380

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> squid-2.7.6-r2.ebuild,
  squid-3.0.18-r1.ebuild:
  alpha/arm/ia64/sparc stable wrt #279380

  25 Aug 2009; Christian Faulhammer <fauli@gentoo.org>
  squid-2.7.6-r2.ebuild, squid-3.0.18-r1.ebuild:
  stable x86, security bug 279380

  23 Aug 2009; nixnut <nixnut@gentoo.org> squid-2.7.6-r2.ebuild,
  squid-3.0.18-r1.ebuild:
  ppc stable #279380

  22 Aug 2009; Jeroen Roovers <jer@gentoo.org> squid-3.0.18-r1.ebuild:
  Stable for HPPA (bug #279380).

  22 Aug 2009; Jeroen Roovers <jer@gentoo.org> squid-2.7.6-r2.ebuild:
  Stable for HPPA (bug #279380).

*squid-3.1.0.13_beta-r1 (22 Aug 2009)
*squid-3.0.18-r1 (22 Aug 2009)
*squid-2.7.6-r2 (22 Aug 2009)

  22 Aug 2009; Alin Năstac <mrness@gentoo.org>
  +files/squid-2.7.6-cve-2009-2855.patch,
  -files/squid-3.0.15-adapted-zph.patch,
  -files/squid-3.0.15-cross-compile.patch, -files/squid-3.0.15-gcc43.patch,
  -files/squid-3.0.15-gentoo.patch, -files/squid-3.0.15-heimdal.patch,
  +files/squid-3.0.18-cve-2009-2855.patch,
  -files/squid-3.1.0.9_beta-gentoo.patch,
  -files/squid-3.1.0.9_beta-invconv.patch,
  +files/squid-3.1.0.13_beta-cve-2009-2855.patch,
  files/squid-3.1.0.13_beta-gentoo.patch,
  files/squid-3.1.0.13_beta-qafixes.patch, +squid-2.7.6-r2.ebuild,
  -squid-3.0.15.ebuild, +squid-3.0.18-r1.ebuild, -squid-3.1.0.9_beta.ebuild,
  -squid-3.1.0.13_beta.ebuild, +squid-3.1.0.13_beta-r1.ebuild:
  Fix security bug 279380. Add fix for -Wl,--as-needed problem when 3.1.0.13
  is compiled with kerberos USE flag enabled. Remove resource consuming PURGE
  method from the default squid.conf installed by 3.1.0.13 version.
