@@ -1,6 +1,10 @@
 # ChangeLog for net-proxy/squid
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.281 2009/08/27 20:20:09 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-proxy/squid/ChangeLog,v 1.282 2009/08/31 00:04:33 ranger Exp $
+
+  31 Aug 2009; Brent Baude <ranger@gentoo.org> squid-2.7.6-r2.ebuild,
+  squid-3.0.18-r1.ebuild:
+  squid-2.7.6-r2 squid-3.0.18-r1 for bug 279380
 
   27 Aug 2009; Steve Dibb <beandog@gentoo.org> squid-2.7.6-r2.ebuild,
   squid-3.0.18-r1.ebuild:
